libraries/ckit/regression/valid-programs/a4.c
int *f() {
 int i = 1;
 return(&i);
}

main () {
  void *j;
  j = f();
}
